Updated the services after retrieving tokens from cookies